Footer text now displayed for all sizes without messing up. Gap between navbar and main container fixed. Navbar expandable changed to fix issue where the links don't fit. Updating notes now uses AJAX.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,11 +23,17 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "navbar";
+@import "footer";
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 12px;
   line-height: 14px;
+}
+
+.remove_top_gap {
+  position: relative;
+  top: -24px;
 }
 
 body {
